# learning-scientific-computing

./: .gitignore  LICENSE  README.md
.github/workflows/: action.yml
base-skills/gnuplot/: README.md
base-skills/gnuplot/script/: 01-Basic-2D-Plot.plt  02-Basic-2D-Plot-with-Data.plt
base-skills/linux/: 01-Libraries.md  README.md
base-skills/manim/: .gitignore  README.md
base-skills/manim/01-animating-a-circle/: scene.py
base-skills/manim/02-square-to-circle/: scene.py
base-skills/manim/03-square-and-circle/: scene.py
base-skills/manim/04-animated-square-to-circle/: scene.py
base-skills/manim/05-using-sections/: scene.py
base-skills/manim/06-manin-building-blocks/: scene.py
base-skills/programming-cpp/ode-runge-kutta-4th-order/: .gitignore  Makefile  README.md  post.py
base-skills/programming-fortran/interoperability-with-c/: .gitignore  Makefile  README.md
base-skills/programming-haskell/haskell-exercises/: .gitignore  .hspec  ChangeLog.md  LICENSE  Makefile  README.md  package.yaml  programming-in-haskell.cabal  stack.yaml
base-skills/programming-haskell/iron-oxidation-kinetics/: .gitignore  ChangeLog.md  LICENSE  README.md  oxyl.cabal  package.yaml
base-skills/programming-lua/language-lua/: .gitignore  LICENCE  README.md  build.bat  build.sh
base-skills/programming-lua/language-lua/lua/: CMakeLists.txt
base-skills/programming-lua/language-lua/lua/scripts/: csv.lua  extensions.lua  gnuplot.lua
base-skills/programming-openmp/: README.md
base-skills/programming-openmp/cpp/: .gitignore  Makefile  main.cpp  step_v0.cpp  step_v1.cpp  step_v2.cpp
base-skills/programming-pascal/: .gitignore
base-skills/programming-pascal/tutorial/: README.md  datatypes.pas  helloworld.pas  operators.pas  sum3.pas
base-skills/programming-python/download-requirements/: .gitignore  README.md  requirements-dev.txt  requirements-nix.txt  requirements-prod.txt  run.ps1
base-skills/programming-python/extension-in-cpython/: .gitignore  Makefile  README.md  setup.py  test.py  test_spam.py
base-skills/programming-python/flask-minimal-host/: .flaskenv  README.md  setup.py  wsgi.py
base-skills/programming-rust/barba12steps/: .gitignore  Cargo.toml  README.md  action.yml  step_01.md
base-skills/programming-rust/barba12steps/src/: lib.rs  step_01.rs  step_02.rs  step_03.rs  step_04.rs  step_05.rs  step_template.rs
base-skills/programming-rust/barba12steps/src/sample_nitriding/: diff1d.rs  main.rs  nitriding.rs  numerics.rs
base-skills/programming-rust/password-file-encryption/: Cargo.toml  README.md
base-skills/programming-rust/password-file-encryption/encryptfile-0.1.3/: .gitignore  Cargo.toml
base-skills/programming-rust/password-file-encryption/encryptfile-0.1.3/src/: config.rs  crypt.rs  crypto_util.rs  lib.rs
databases/iapws95/: iapws95.py
databases/kinetics/: 1S_CH4_MP1.cti  2S_CH4_BFER.cti  OF-hydrocarbon-dalmazsi-2017-mech.foam  OF-hydrocarbon-dalmazsi-2017-ther.foam  README.md
databases/kinetics/Dalmazsi_2017_sk41/: CK-hydrocarbon-dalmazsi-2017-mech.inp  CT-hydrocarbon-dalmazsi-2017-mech.xml
databases/kinetics/Lu_2008_CH4_red19/: chem.inp  ckwyp.f  lu19_gri30.cti
databases/kinetics/Lu_2008_CH4_sk30/: .gitignore  OF-hydrocarbon-lu-2008-sk30-mech.foam  OF-hydrocarbon-lu-2008-sk30-ther.foam  chem.inp  convert.py  convert.sh  lu30_gri30.cti  transport.foam
databases/kinetics/Methane_Low_Order/: 2S_CH4_BFER.inp
databases/kinetics/Norinaga_2009/: CT-hydrocarbon-norinaga-2009-mech.xml  OF-hydrocarbon-norinaga-2009-mech.foam  OF-hydrocarbon-norinaga-2009-ther.foam
databases/thermodynamics/: cost507.tdb  frisk1991.tdb  hillert1990.tdb
finite-elements/kratos-multiphysics/: .gitignore  README.md
fluid-dynamics/cantera/: 000-Transport-Properties-Array.ipynb
fluid-dynamics/code-saturn/: .gitignore  README.md
fluid-dynamics/dualsphysics/: .gitignore
fluid-dynamics/helpers/: 001-Setup-Particle-Mass-Flow-Fluent.ipynb  002-Setup-Multiphase-Flow-Fluent.ipynb
geometry-meshing/salome/: .gitignore
granular-flow/kiln/: kramers.py
granular-flow/musen/: .gitignore
machine-learning/: 000-Teaching-MPC-Through-PSR.ipynb  001-Vision-Detect-Shade-Rectangle.ipynb  A00-Test-GPU-Libraries.ipynb  tf_common.py
machine-learning/introduction-to-machine-llearning/: introduction_to_machine_learning.md
molecular-dynamics/espresso/: .gitignore  001-espresso-01-lennard-jones.py  001-espresso-02-lennard-jones.py
molecular-dynamics/lammps/: .gitignore  README.md
numerical-notebooks/: .gitignore  000-Harmonic-Oscillator-ROM-Julia.ipynb  001-Jacobi-Iterative-Solver-Python.ipynb  002-Teaching-MPC-Through-PSR-Python.ipynb  006-Statistics-Chi2-Distribution-Python.ipynb  007-Schrodinger-Equation-FDM-Python.ipynb  008-Uncoupling-System-of-ODEs.ipynb  009-Generating-UDF-for-CFD-Codes.ipynb  010-Hydrogen-Flame-Studies.ipynb  011-Methane-Flame-Studies.ipynb  012-Parallelization-GPU-Numba.ipynb  013-Image-Analysis-Porosity.ipynb  014-Image-Analysis-Region-Props.ipynb  015-Methane-Combustion-Comparison.ipynb  015-Oxycombustion-Methane-Studies.ipynb  016-Granular-Transport-Kramer-Model.ipynb  017-Particle-Image-Velocimetry.ipynb  018-Advection-Plug-Flow-Heating.ipynb  README.md
numerical-notebooks/media/: adiabatic_flame_temperature.csv  hydrogen_ignition_delay_T.csv  hydrogen_ignition_delay_Y.csv
numerical-notebooks/utilities/: nb015.py
physics-mathematics/books-nussenzveig/: README.md
physics-mathematics/calculus/: 001-SymPy-for-Calculus.ipynb
publications/: .gitignore
publications/paper-cavilha-2023/: image-analysis.py  postprocessing.ipynb
study-notes/: .gitignore  document.tex  references.bib
thermochemistry/base-calphad/: 001-Note-on-Sublattice-Model.ipynb
thermochemistry/opencalphad/: .gitignore
thermochemistry/pycalphad/: 01-Introduction.ipynb
thermochemistry/tdb/: guo2015.tdb  hallstedt1990.tdb  hallstedt1992.tdb  hillert1990.tdb  unary50.tdb
(+353 files in other folders)
